--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,150 +1,69 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{{> header}}
+<body>
+  <div class="container-fluid my-3">
+    <div class="row">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <div class="col-sm">
+      </div>
 
-    <title>Profile Page</title>
+      <div class="col-sm-8">
+        <div class="container">
+          <div class="card mb-3">
+            <div class="card-header">
+              <h5 align ="center"><strong>PROFILE</strong></p></h5>
+            </div>
+            <div class="card-body">
+              <p align ="center">{{user.profile.about.name.firstName}} {{user.profile.about.name.middleName}} {{user.profile.about.name.lastName}}</p>
+              <p align ="center">2019 Pasout Batch</p>
+              <p align ="center">Semester</p>
+            </div>
+          </div>
 
-    <style media="screen">
-      body {
-        background-color: #c1c1c1;
-      }
-      h5 {
-        color:#B8860B;
-      }
-     p {
-       color:#696969;
-     }
-     div{
-       color:#696969;
-     }
-     class {
-       color:#696969;
-     }
-     form{
-       color:#696969;
-     }
-     id {
-       color:	#BC8F8F;
-     }
-    </style>
-
-  </head>
-  <body>
-    <div class="container-fluid my-3">
-      <div class="row">
-
-        <div class="col-sm-3">
-
-        </div>
-
-        <div class="col-sm-6">
-           <div class="container" id="main">
-              <div class="card mb-3">
-                <div class="card-header">
-                  <h5 align ="center"><strong>PROFILE</strong></p></h5>
-                </div>
-                <div class="card-body">
-                   <p text="NAME" align ="center">Name</p>
-                   <p text="BATCH" align ="center">2019 Pasout Batch</p>
-                   <p text="SEMESTER" align ="center">Semester</p>
+          <div class="card mb-3" id="About">
+            <div class="card-header">
+              <h5><strong>ABOUT</strong></h5>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-sm-4">
+                  <p>Address</p>
+                  <P>Contact No</p>
+                  </div>
+                  <div class="col-sm-8">
+                    <textarea rows="4" cols="33"></textarea>
+                    <br>
+                    <input type="text" class="btn-lg" name="contact no" />
+                  </div>
                 </div>
               </div>
+            </div>
 
-
-              <div class="card mb-3" id="About">
-                 <div class="card-header">
-                    <h5><strong>ABOUT</strong></h5>
-                 </div>
-                 <div class="card-body">
-                   <div class="row">
-                     <div class="col-sm-4">
-                       <p>Address</p>
-                       <br>
-                       <br>
-                       <br>
-                       <P>Contact No</p>
-                     </div>
-                     <div class="col-sm-8">
-                       <textarea rows="4" cols="33"></textarea>
-                       <br>
-                      <input type="text" class="btn-lg" name="contact no" />
-                     </div>
-                   </div>
-                 </div>
+            <div class="card mb-3" id="Education">
+              <div class="card-header">
+                <h5><strong>EDUCATION</strong></h5>
               </div>
-
-              <div class="card mb-3" id="Education">
-                 <div class="card-header">
-                    <h5><strong>EDUCATION</strong></h5>
-                 </div>
-                 <div class="card-body">
-                  <div class="row">
-                     <div class="col-sm-6">
-                      <h4><p>Current/Ongoing Course</p>
-                     </div>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-sm-6">
+                      <h4>Current/Ongoing Course</h4>
                   </div>
-                  <div class="row">
-
-                    <div class="col-sm-4">
-                    </div>
-
-                      <div class="col-sm-4">
-                        <thead>
-                         <tr>
-                           <th scope="col"></th>
-                           <th scope="col"><strong>CGPA</strong></th>
-                         </tr>
-                       </thead>
-                      </div>
-
-                      <div class="col-sm-4">
-                        <thead>
-                         <tr>
-                           <th scope="col"></th>
-                           <th scope="col"><strong>SGPA</strong></th>
-                         </tr>
-                       </thead>
-                      </div>
-
+                  <div class="col-sm">
+                    <thead>
+                      <tr>
+                        <th scope="col"></th>
+                        <th scope="col"><strong>CGPA</strong></th>
+                      </tr>
+                    </thead>
                   </div>
 
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h6><p>Semester1</p></h6>
-                      <h6><p>Semester2</p></h6>
-                      <h6><p>Semester3</p></h6>
-                      <h6><p>Semester4</p></h6>
-                      <h6><p>Semester5</p></h6>
-                      <h6><p>Semester6</p></h6>
-                      <h6><p>Semester7</p></h6>
-                      <h6><p>Semester8</p></h6>
-                    </div>
-                    <div class="col-sm-4">
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                    </div>
-                    <div class="col-sm-4">
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                      <p><input type="text" name="score" /></p>
-                    </div>
+                  <div class="col-sm">
+                    <thead>
+                      <tr>
+                        <th scope="col"></th>
+                        <th scope="col"><strong>SGPA</strong></th>
+                      </tr>
+                    </thead>
+                  </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-4">
@@ -154,86 +73,77 @@
                     <input type="text" name="Total Backlogs" />
                   </div>
                 </div>
-
-              </div>
-                 <hr>
-                 <div class="card-body">
-                    <div class="row">
-                       <div class="col-sm-9">
-                        <h4><p>Update Education Details</p>
-                       </div>
+                <hr>
+                <h4><p>Update Education Details</p>
+                <div class="row">
+                  <div class="col-sm-10">
+                    <h6><p>School/Institution</p><h6>
+                      <input type="text" class="btn-lg btn-block" name="School/Institutio" />
+                      <h6><p>Board/University</p><h6>
+                      <input type="text" class="btn-lg btn-block" name="Board/University" />
+                      <h6><p>Program/Degree</p><h6>
+                      <select class="btn-lg btn-block">
+                        <option value="" disabled selected>None</option>
+                        <option value="volvo">Class X</option>
+                        <option value="saab"> Class XII</option>
+                        <option value="mercedes">B.E/B.Tech</option>
+                        <option value="audi">Other Degree</option>
+                      </select>
+                      <h6><p>Branch/Specialization</p><h6>
+                      <input type="text" class=" btn-lg btn-block" name="Board/University" />
+                      <h6><p>Score</p><h6>
+                      <input type="text" class="btn-lg" name="Score" />
                     </div>
-                    <div class="row">
-                      <div class="col-sm-10">
-                         <h6><p>School/Institution</p><h6>
-                         <input type="text" class="btn-lg btn-block" name="School/Institutio" />
-                         <h6><p>Board/University</p><h6>
-                         <input type="text" class="btn-lg btn-block" name="Board/University" />
-                         <h6><p>Program/Degree</p><h6>
-                           <select class="btn-lg btn-block">
-                              <option value="" disabled selected>None</option>
-                              <option value="volvo">Class X</option>
-                              <option value="saab"> Class XII</option>
-                              <option value="mercedes">B.E/B.Tech</option>
-                              <option value="audi">Other Degree</option>
-                          </select>
-                          <h6><p>Branch/Specialization</p><h6>
-                          <input type="text" class=" btn-lg btn-block" name="Board/University" />
-                          <h6><p>Score</p><h6>
-                          <input type="text" class="btn-lg" name="Score" />
-                       </div>
-                   </div>
-                    <hr>
-                    <div class="col-sm-9">
-                     <h4><p>Update Education Details</p></h4>
+                  </div>
+                  <hr>
+                  <h4><p>Update Education Details</p></h4>
+                  <div class="row">
+                    <div class="col-sm-10">
+                      <h6><p>College/Institution</p><h6>
+                      <input type="text" class="btn-lg btn-block" name="School/Institutio" />
+                      <h6><p>Board/University</p><h6>
+                      <input type="text" class="btn-lg btn-block" name="Board/University" />
+                      <h6><p>Program/Degree</p><h6>
+                      <select class="btn-lg btn-block">
+                        <option value="" disabled selected>None</option>
+                        <option value="volvo">Class X</option>
+                        <option value="saab"> Class XII</option>
+                        <option value="mercedes">B.E/B.Tech</option>
+                        <option value="audi">Other Degree</option>
+                      </select>
+                      <h6><p>Branch/Specialization</p><h6>
+                      <input type="text" class=" btn-lg btn-block" name="Board/University" />
+                      <h6><p>Score</p><h6>
+                      <input type="text" class="btn-lg" name="Score" />
                     </div>
-                    <div class="row">
-                      <div class="col-sm-10">
-                         <h6><p>College/Institution</p><h6>
-                         <input type="text" class="btn-lg btn-block" name="School/Institutio" />
-                         <h6><p>Board/University</p><h6>
-                         <input type="text" class="btn-lg btn-block" name="Board/University" />
-                         <h6><p>Program/Degree</p><h6>
-                           <select class="btn-lg btn-block">
-                              <option value="" disabled selected>None</option>
-                              <option value="volvo">Class X</option>
-                              <option value="saab"> Class XII</option>
-                              <option value="mercedes">B.E/B.Tech</option>
-                              <option value="audi">Other Degree</option>
-                          </select>
-                          <h6><p>Branch/Specialization</p><h6>
-                          <input type="text" class=" btn-lg btn-block" name="Board/University" />
-                          <h6><p>Score</p><h6>
-                          <input type="text" class="btn-lg" name="Score" />
-                       </div>
-                    </div>
-                 </div>
+                  </div>
+                </div>
               </div>
 
               <div class="card mb-3" id="Internship & Work Experience">
-                 <div class="card-header">
-                    <h5><strong>INTERNSHIP & WORK EXPERIENCE</strong></h5>
-                 </div>
+                <div class="card-header">
+                  <h5><strong>INTERNSHIP & WORK EXPERIENCE</strong></h5>
+                </div>
                 <div class="card-body">
-                 <div class="row">
-                   <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-10">
                       <h6><p>Company</p><h6>
                       <input type="text" class="btn-lg btn-block" name="Company" />
                       <h6><p>Job Title</p><h6>
                       <input type="text" class="btn-lg btn-block" name="Job Title" />
                       <h6><p>Position Type</p><h6>
                       <select class="btn-lg btn-block">
-                           <option value="" disabled selected>None</option>
-                           <option value="volvo">Part Time</option>
-                           <option value="saab">Full Time</option>
-                           <option value="mercedes">Internship</option>
-                       </select>
+                        <option value="" disabled selected>None</option>
+                        <option value="volvo">Part Time</option>
+                        <option value="saab">Full Time</option>
+                        <option value="mercedes">Internship</option>
+                      </select>
                       <h6><p>Location</p><h6>
                       <input type="text" class="btn-lg btn-block" name="Location" />
                       <h6><p>Time Period</p><h6>
                       <div class="row">
                         <div class="col-sm-6">
-                         <p text="Start Date">Start Date</p>
+                          <p text="Start Date">Start Date</p>
                           <input type="date" />
                         </div>
                         <div class="col-sm-6">
@@ -241,55 +151,52 @@
                           <input type="date" />
                         </div>
                       </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
 
               <div class="card mb-3" id="Extra Curricular Activities">
-                 <div class="card-header">
-                    <h5><strong>EXTRA CURRICULAR ACTIVITIES</strong></h5>
-                 </div>
-                 <div class="card-body">
-                    <div class="row">
-                      <div class="col-sm-10">
-                         <h6><p>Category</p><h6>
-                         <input type="text" class="btn-lg btn-block" name="Category" />
-                     </div>
-                     <div class="col-sm-10">
-                        <h6><p>Description</p><h6>
-                        <textarea class="btn-lg btn-block" rows="4" cols="65">
-                        </textarea>
+                <div class="card-header">
+                  <h5><strong>EXTRA CURRICULAR ACTIVITIES</strong></h5>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-10">
+                      <h6><p>Category</p><h6>
+                      <input type="text" class="btn-lg btn-block" name="Category" />
                     </div>
-                   </div>
-                 </div>
+                    <div class="col-sm-10">
+                      <h6><p>Description</p><h6>
+                      <textarea class="btn-lg btn-block" rows="4" cols="65"></textarea>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="card mb-3" id="Resume">
-                 <div class="card-header">
-                    <h5><strong>RESUME</strong></h5>
-                 </div>
-                 <div class="card-body">
-                   <form action="myform.cgi">
-                     <input type="file" name="fileupload" value="fileupload" id="fileupload">
-                   </form>
-                 </div>
+                <div class="card-header">
+                  <h5><strong>RESUME</strong></h5>
+                </div>
+                <div class="card-body">
+                  <form action="myform.cgi">
+                    <input type="file" name="fileupload" value="fileupload" id="fileupload">
+                  </form>
+                </div>
               </div>
 
               <div class="form-group">
                 <label for="exampleInputEmail1"></label>
-                 <a href="/profile" class="btn btn-primary">Save</a>
-                 <input type="button" class="btn btn-primary" name="Cancel" value="cancel" />
+                <a href="/profile" class="btn btn-primary">Save</a>
+                <input type="button" class="btn btn-primary" name="Cancel" value="cancel" />
               </div>
 
-           </div>
-         </div>
-    </div>
+            </div>
+          </div>
 
-
-
-    <div class="col-sm-3">
-
+        <div class="col-sm">
+        </div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -298,4 +205,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-</html>
