--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -94,6 +94,7 @@
                       <h5><p text="cgpa" align="right">CGPA</p></h5>
                     </div>
                   </div>
+                  <div class="row">
                     Bachelor of Engineering<br>Computer Science and Engineering<br>USN|2019 Passout Batch<br>JUN 2015-JUN 2019
                     <table class="table table-bordered">
                         <thead>
@@ -156,9 +157,8 @@
                           </tr>
                         </tbody>
                       </table>
-                 </div>
-                 <hr class="m-4">
-                 <div class="card-body">
+                  </div>
+                 <hr class="m-5">
                     <div class="row">
                        <div class="col-sm-6">
                         <h4><p>Class 12th/Diploma</p>
@@ -168,7 +168,7 @@
                       </div>
                     </div>
                     College  Name<br>Board<br>12th/Diploma<br>2014-2015
-                      <hr>
+                      <hr class="m-5">
                     <div class="row">
                        <div class="col-sm-6">
                         <h4><p>Class 10th</p>
