--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -21,50 +21,51 @@
       <div class="col">
       </div>
       <div class="col-5">
+        <div class="alert alert-danger mt-5" role="alert" id="error" style="display: None">
+      </div>
         <div class="card my-5 shadow">
           <div class="card-body">
             <h5 class="card-title display-4 text-center">Sign Up</h5>
-            <form action="/signup" method="post" class="my-5">
-
+            <form action="/signup" method="post" class="my-5" id="signupForm">
               <div class="form-group">
-                <input type="text" class="form-control" name="usn" placeholder="Enter USN">
+                <input type="text" class="form-control" id="usn" name="usn" placeholder="Enter USN">
               </div>
 
               <div class="row">
                 <div class="col form-group">
-                  <input type="text" class="form-control" name="fName" placeholder="First Name">
+                  <input type="text" class="form-control" id="fName" name="fName" placeholder="First Name">
                 </div>
                 <div class="col form-group">
-                  <input type="text" class="form-control" name="mName" placeholder="Middle Name">
+                  <input type="text" class="form-control" id="mName" name="mName" placeholder="Middle Name">
                 </div>
                 <div class="col form-group">
-                  <input type="text" class="form-control" name="lName" placeholder="Last Name">
+                  <input type="text" class="form-control" id="lName" name="lName" placeholder="Last Name">
                 </div>
               </div>
 
               <div class="form-group">
-                <input type="email" class="form-control" name="email"  placeholder="Enter Email">
+                <input type="email" class="form-control" id="email" name="email"  placeholder="Enter Email">
               </div>
 
               <div class="form-group">
-                <input type="number" class="form-control" name="phone"  placeholder="Phone">
+                <input type="number" class="form-control" id="phone" name="phone"  placeholder="Phone">
               </div>
 
               <div class="form-group">
-                <input type="password" class="form-control" name="password"  placeholder="Password">
+                <input type="password" class="form-control" id="password" name="password"  placeholder="Password">
               </div>
 
               <div class="form-group">
-                <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password">
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
               </div>
 
               <div class="form-group">
                 <div class="row">
                   <div class="col">
-                    <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                    <button type="submit" id="submit" class="btn btn-primary btn-block">Sign Up</button>
                   </div>
                   <div class="col">
-                    <a href="/" role="button" class="btn btn-danger btn-block">Cancel</a>
+                    <button type="button" class="btn btn-danger btn-block">Cancel</button>
                   </div>
                 </div>
               </div>
@@ -78,12 +79,68 @@
     </div>
   </div>
 
-
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+
+  function isEmail(email) {
+      var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      return regex.test(email);
+  }
+
+  $("form").submit(function(e) {
+
+    var error="";
+    if($("#usn").val() == "") {
+      error += "usn required<br>";
+    }
+    if($("#fName").val() == "") {
+      error += "First Name is required<br>";
+    }
+    if($("#mName").val() == "") {
+      error += "Middle Name is required<br>";
+    }
+    if($("#lName").val() == "") {
+      error += "Last name is required<br>";
+    }
+    if($("#email").val() == "") {
+      error += "Email is required<br>";
+    }
+    if($("#phone").val() == "") {
+      error += "Phone is required<br>";
+    }
+    if($("#password").val() == "") {
+      error += "Password required<br>";
+    }
+
+    var usnmatch = "/^[0-9][A-Z a-z][A-Z a-z][0-9][0-9][A-Z a-z][A-Z a-z][0-9][0-9][0-9]+$/"
+    if((usn.value.match(usnmatch))) {
+      error += "enter a valid usn";
+    }
+    if(isEmail($("#email").val()) == false) {
+      error += "enter a valid email";
+    }
+    if($.isNumeric($("#phone").val()) == false) {
+      error += "enter a valid contact number";
+    }
+    if($("#password").val() != $("#confirmPassword").val()) {
+      error += "password doesn't match";
+    }
+    $("#error").html(error);
+    if(error != "") {
+      e.preventDefault();
+      $("#error").show();
+    }
+    else {
+      $("#error").hide();
+    }
+  });
+
+  </script>
+
 </body>
 </html>
